# otto-workflows

./: .gitignore  README.md  pyproject.toml
otto/: __init__.py
otto/model/: __init__.py  io.py  workflow.py
otto/planner/: __init__.py  planner.py
otto/store/: __init__.py  db.py  queries.py  tables.py
tests/: test_model.py  test_planner.py  test_store.py
